@@ -18,13 +18,6 @@ package com.baidu.rasp.install.windows;
 
 import com.baidu.rasp.RaspError;
 import com.baidu.rasp.install.BaseStandardInstaller;
-import org.apache.commons.io.FileUtils;
-import org.apache.commons.io.IOUtils;
-
-import java.io.File;
-import java.io.FileWriter;
-import java.io.IOException;
-import java.io.InputStream;
 import java.util.Scanner;
 import java.util.regex.Pattern;
 
@@ -39,7 +32,11 @@ public class TomcatInstaller extends BaseStandardInstaller {
             "rem BEGIN OPENRASP - DO NOT MODIFY" + LINE_SEP +
             "if \"%ACTION%\" == \"start\" set JAVA_OPTS=\"-javaagent:%CATALINA_HOME%\\rasp\\rasp.jar\" %JAVA_OPTS%" + LINE_SEP +
             "rem END OPENRASP" + LINE_SEP;
+    private static String JDK_JAVA_OPTIONS = "set JDK_JAVA_OPTIONS=\"=%JDK_JAVA_OPTIONS% --add-opens=java.base/jdk.internal.loader=ALL-UNNAMED\"\n";
+
     private static Pattern OPENRASP_REGEX = Pattern.compile(".*(\\s*OPENRASP\\s*|JAVA_OPTS.*\\\\rasp\\\\).*");
+    private static Pattern JDK_JAVA_OPTIONS_REGEX = Pattern.compile(".*JDK_JAVA_OPTIONS.*jdk\\.internal\\.loader.*");
+
 
     TomcatInstaller(String serverName, String serverRoot) {
         super(serverName, serverRoot);
@@ -57,6 +54,8 @@ public class TomcatInstaller extends BaseStandardInstaller {
 
     @Override
     protected String modifyStartScript(String content) throws RaspError {
+        boolean versionFlag = checkTomcatVersion();
+        boolean jdk_java_options = false;
         int modifyConfigState = NOTFOUND;
         StringBuilder sb = new StringBuilder();
         Scanner scanner = new Scanner(content);
@@ -74,10 +73,26 @@ public class TomcatInstaller extends BaseStandardInstaller {
             if (line.startsWith(":setArgs") && NOTFOUND == modifyConfigState) {
                 modifyConfigState = FOUND;
             }
+            //添加jdk9以上的版本的依赖
+            if (line.startsWith("set") && line.contains("JDK_JAVA_OPTIONS=") && versionFlag) {
+                if (!jdk_java_options) {
+                    jdk_java_options = true;
+                    sb.append(line).append("\n");
+                    sb.append(JDK_JAVA_OPTIONS);
+                    continue;
+                } else {
+                    if (JDK_JAVA_OPTIONS_REGEX.matcher(line).matches()) {
+                        continue;
+                    }
+                }
+            }
             sb.append(line).append(LINE_SEP);
         }
         if (NOTFOUND == modifyConfigState) {
             throw new RaspError(E10001 + "\":setArgs\"");
+        }
+        if (versionFlag && !jdk_java_options) {
+            throw new RaspError(E10001 + "JDK_JAVA_OPTIONS=");
         }
         return sb.toString();
     }
